GOBE-56: Fix invitation,suggest for challegen